.openshift/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manuela-visual-inspection-ui
  namespace: manuela-visual-inspection-ui
  labels:
    app.kubernetes.io/instance: manuela-visual-inspection-ui
    app.kubernetes.io/name: manuela-visual-inspection-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: manuela-visual-inspection-ui
      app.kubernetes.io/name: manuela-visual-inspection-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: manuela-visual-inspection-ui
        app.kubernetes.io/name: manuela-visual-inspection-ui
    spec:
      automountServiceAccountToken: true
      containers:
        - image: 'ghcr.io/kounex/manuela-visual-inspection-ui:0.5.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: manuela-visual-inspection-ui
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/app-root/src/assets/assets/env
              name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: manuela-visual-inspection-ui
      serviceAccountName: manuela-visual-inspection-ui
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: manuela-visual-inspection-ui-config
          name: config
