.openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manuela-visual-inspection-ui
  namespace: manuela-visual-inspection-ui
  labels:
    app.kubernetes.io/instance: manuela-visual-inspection-ui
    app.kubernetes.io/name: manuela-visual-inspection-ui
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: manuela-visual-inspection-ui
    app.kubernetes.io/name: manuela-visual-inspection-ui
