.openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: manuela-visual-inspection-ui
  namespace: manuela-visual-inspection-ui
  labels:
    app.kubernetes.io/instance: manuela-visual-inspection-ui
    app.kubernetes.io/name: manuela-visual-inspection-ui
spec:
  host: manuela-visual-inspection-ui.apps.ocp.kounex.com
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: manuela-visual-inspection-ui
    weight: 100
